[package]
name = "mdbook-callouts"
version = "0.2.2"
authors = ["Alisue <lambdalisue@gmail.com>", "GrayJack <gr41.j4ck@gmail.com>"]
edition = "2021"

description = "mdBook preprocessor to add Obsidian Flavored Markdown's Callouts to your book"
repository = "https://github.com/GrayJack/rs-mdbook-callouts"
license = "MIT"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "markdown", "obsidian", "callouts"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", default-features = false }
clap = { version = "4.4.18", features = ["derive"] }
mdbook-driver = "0.5.2"
mdbook-preprocessor = "0.5.2"
once_cell = { version = "1.19.0", default-features = false }
regex = "1.10.2"
rust-embed = "8.5.0"
semver = "1.0.21"
serde = { version = "1.0.195", default-features = false }
serde_json = "1.0.111"
